Changes on styles, added new endpoint, modified article write

--- a/src/Components/EventCard/EventCard.scss
+++ b/src/Components/EventCard/EventCard.scss
@@ -199,44 +199,44 @@
   // User Info
   .UserName-Theme_02 {
     @extend .UserName;
-    color: $dark0;
+    color: #323236;
   }
   .UserDesc-Theme_02 {
     @extend .UserDesc;
-    color: $dark0;
+    color: #323236;
   }
 
   // Event Dates
   .EventDate-Theme_02 {
     @extend .EventDate;
-    color: $dark0;
+    color: #323236;
   }
   .EventMonth-Theme_02 {
     @extend .EventMonth;
-    color: $dark0;
+    color: #323236;
   }
 
   // Event Info
   .MainTitle-Theme_02 {
-    color: $dark0;
+    color: #323236;
   }
   .EventTitle-Theme_02 {
     @extend .EventTitle;
-    color: $dark0;
+    color: #323236;
   }
   .EventDesc-Theme_02 {
     @extend .EventDesc;
-    color: $dark0;
+    color: #323236;
   }
 
   // Event Actions
   .SocialMediaButton-Theme_02 {
     @extend .SocialMediaButton;
-    color: $dark0;
+    color: #323236;
   }
   .EventButton-Theme_02 {
     @extend .EventButton;
-    color: $dark0;
+    color: #323236;
   }
 }
 
