--- a/src/Components/PCollapsableButton/PCollapsableButton.scss
+++ b/src/Components/PCollapsableButton/PCollapsableButton.scss
@@ -4,7 +4,7 @@
 .PCollapsableButton {
   cursor: pointer;
   position: relative;
-  // text-shadow: 0 0 3px $dark1;
+  // text-shadow: 0 0 3px #323236;
   font-size: 15px !important;
   transition: all 1s;
   margin-bottom: 5px;
