--- a/src/Components/PDropdownButton/PDropdownButton.scss
+++ b/src/Components/PDropdownButton/PDropdownButton.scss
@@ -43,7 +43,7 @@
   background-image: linear-gradient(-45deg, #eeeef0, #c5c7ce);
 }
 .DropdownIcon-Theme_02 {
-  color: $dark0;
+  color: #323236;
 }
 
 .PDropdownButton-Theme_03 {
@@ -51,5 +51,5 @@
   background-image: linear-gradient(-45deg, #e594f0, #5183ce);
 }
 .DropdownIcon-Theme_03 {
-  color: $dark0;
+  color: #323236;
 }
