--- a/src/Screens/Errors/404/404.scss
+++ b/src/Screens/Errors/404/404.scss
@@ -8,7 +8,7 @@
   .ErrorCode {
     font-weight: 800;
     font-size: 13vw;
-    text-shadow: 2px 5px $dark0;
+    text-shadow: 2px 5px #323236;
   }
   .Subtitle {
     font-weight: 300;
