--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -6,7 +6,7 @@
   height: calc(8vh + 5px);
   min-height: 69px;
   background: linear-gradient(to right, #303031, #232324);
-  box-shadow: 0px 5px 5px rgba($dark0, 0.2);
+  box-shadow: 0px 5px 5px rgba(#323236, 0.2);
   padding-right: 2rem;
   padding-left: 6.25rem;
   position: relative;
@@ -66,7 +66,7 @@
     }
 
     .ListItem:hover {
-      background-color: $dark3;
+      background-color: #323236;
     }
   }
 }
