--- a/src/Components/PButton/PButton.scss
+++ b/src/Components/PButton/PButton.scss
@@ -3,13 +3,13 @@
 
 .PButton {
   position: relative;
-  // background-color: $dark3 !important;
+  // background-color: #323236 !important;
   text-transform: none !important;
   border-radius: 3px !important;
   color: white !important;
-  text-shadow: 0 0 3px $dark1;
+  text-shadow: 0 0 3px #323236;
   font-size: 15px !important;
-  box-shadow: inset 0 0 0.01px 0 $dark3, inset 5px 0 $primary !important;
+  box-shadow: inset 0 0 0.01px 0 #323236, inset 5px 0 $primary !important;
   padding-top: 15px !important;
   padding-bottom: 15px !important;
 }
