--- a/src/Components/PChip/PChip.scss
+++ b/src/Components/PChip/PChip.scss
@@ -30,21 +30,21 @@
 
 .PChip-Theme_02 {
   @extend .PChip;
-  color: $dark0;
+  color: #323236;
   border: 1px solid rgba(#c3cfe2, 1);
   background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
   .CheckBox {
-    color: rgba($dark0, 1);
+    color: rgba(#323236, 1);
   }
 }
 
 .PChip-Theme_03 {
   @extend .PChip;
-  color: $dark0;
+  color: #323236;
   border: 1px solid rgba(#c3cfe2, 1);
   background-image: linear-gradient(-45deg, #8EC5FC, #E0C3FC);
   .CheckBox {
-    color: rgba($dark0, 0.7);
+    color: rgba(#323236, 0.7);
   }
 }
 
