--- a/src/Components/PSearchBar/PSearchBar.scss
+++ b/src/Components/PSearchBar/PSearchBar.scss
@@ -4,7 +4,7 @@
 .PSearchBar {
   .Input {
     width: 400px;
-    background-color: $dark1;
+    background-color: #323236;
     border-radius: 10px;
     height: 30px;
     padding: 0.5rem;
@@ -23,17 +23,17 @@
 
   .DropdownContent {
     position: absolute;
-    background-color: $dark4;
+    background-color: #323236;
     min-width: 160px;
     max-width: 600px;
     margin-top: 10px;
     border-radius: 10px;
     overflow: auto;
-    box-shadow: 0 0 7px 2px $dark0;
+    box-shadow: 0 0 7px 2px #323236;
     z-index: 1;
 
     .ListCategory {
-      background-color: $dark4;
+      background-color: #323236;
 
       .ListTitle {
         font-size: 20px;
@@ -44,7 +44,7 @@
 
       .ListItem {
         padding: 10px 20px;
-        background-color: $dark1;
+        background-color: #323236;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -76,7 +76,7 @@
     }
 
     .ListItem:hover {
-      background-color: $dark3;
+      background-color: #323236;
     }
   }
 }
