--- a/src/Screens/Home/Home.scss
+++ b/src/Screens/Home/Home.scss
@@ -10,7 +10,6 @@
     text-align: left;
     font-weight: 600;
     font-size: 3vw;
-    margin-left: 20px;
     text-shadow: 0 0 3px #323236;
     margin-bottom: 20px;
   }
@@ -34,63 +33,6 @@
     font-size: 2vw;
   }
 
-  .LiveEvent {
-    margin-left: 10px;
-    color: #e44a4a;
-    animation: LiveAnimation 1s infinite alternate;
-    display: flex;
-    place-items: center;
-  }
-
-  @keyframes LiveAnimation {
-    0% {
-      color: #e44a4a;
-    }
-    100% {
-      color: #ce1616;
-      text-shadow: 0 0 10px #7e1717;
-    }
-  }
-
-  .EventList {
-    margin-bottom: 35px;
-    margin-left: 20px;
-
-    .NoEventsContainer {
-      display: flex;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      align-items: center;
-
-      .NoEventText {
-        @extend .Text;
-        font-size: 2rem;
-        font-weight: 500;
-        margin-left: 10px;
-      }
-
-      .NoEventIcon {
-        width: 50px;
-        height: 50px;
-        margin-left: 50px;
-      }
-    }
-  }
-
-  .Event {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(230, 99, 99);
-    margin: 0 20px;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: left;
-
-    .EventTitle {
-      @extend .Titles;
-    }
-  }
-
   .BodyAndFilters {
     display: flex;
     flex-direction: row;
@@ -104,15 +46,53 @@
     }
 
     .CreateContainer {
-      @extend .GlassSurface-01;
-      border-radius: 10px;
-      height: 100px;
       display: flex;
       justify-content: space-around;
+      border-radius: 10px;
+      height: 100px;
+      margin-bottom: 10px;
+      margin-top: 122px;
       align-items: center;
-      margin-bottom: 20px;
-      margin-top: 18px;
     }
+
+    .EventList {
+      margin-bottom: 35px;
+      .NoEventsContainer {
+        display: flex;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        align-items: center;
+        .NoEventText {
+          @extend .Text;
+          font-size: 2rem;
+          font-weight: 500;
+        }
+        .NoEventIcon {
+          width: 50px;
+          height: 50px;
+          margin-left: 30px;
+          margin-right: 20px;
+        }
+      }
+    }
+
+    .LiveEvent {
+      margin-left: 10px;
+      color: #e44a4a;
+      animation: LiveAnimation 1s infinite alternate;
+      display: flex;
+      place-items: center;
+    }
+  }
+}
+
+@keyframes LiveAnimation {
+  0% {
+    color: #e44a4a;
+  }
+  100% {
+    color: #ce1616;
+    text-shadow: 0 0 10px #7e1717;
   }
 }
 
@@ -134,6 +114,14 @@
   .NoEventIcon-Theme_01 {
     @extend .NoEventIcon;
     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(329deg) brightness(107%) contrast(101%);
+  }
+  .CreateButton {
+    @extend .GenericButton-Theme_01;
+    @extend .ComponentSurface-Theme_01;
+  }
+  .CreateContainer-Theme_01 {
+    @extend .CreateContainer;
+    @extend .ComponentSurface-Theme_01;
   }
 }
 
@@ -159,6 +147,14 @@
     @extend .NoEventIcon;
     color: #323236;
   }
+  .CreateButton {
+    @extend .GenericButton-Theme_02;
+    @extend .ComponentSurface-Theme_02;
+  }
+  .CreateContainer-Theme_02 {
+    @extend .CreateContainer;
+    @extend .ComponentSurface-Theme_02;
+  }
 }
 
 .Home-Theme_03 {
@@ -180,4 +176,11 @@
     @extend .NoEventIcon;
     filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(329deg) brightness(107%) contrast(101%);
   }
-}
+  .CreateButton {
+    @extend .GenericButton-Theme_03;
+    @extend .ComponentSurface-Theme_03;
+  }
+  .CreateContainer-Theme_03 {
+    @extend .CreateContainer;
+    @extend .ComponentSurface-Theme_03;
+  }}
