--- a/src/Utils/StyleClasses.scss
+++ b/src/Utils/StyleClasses.scss
@@ -53,7 +53,7 @@
   @extend .GenericButton;
   border: 1px solid rgba(#c3cfe2, 1);
   background-image: linear-gradient(-45deg, #949494, #585858);
-  color: $textPrimary;
+  color: white;
 }
 
 .GenericButton-Theme_02 {
@@ -65,7 +65,7 @@
 
 .GenericButton-Theme_03 {
   @extend .GenericButton;
-  color: #323236;
+  color: white;
   border: 1px solid #7a7b7c;
   background-image: linear-gradient(-45deg, #8EC5FC, #E0C3FC);
 }
@@ -123,7 +123,7 @@
 
 .ComponentSurface-Theme_02 {
   background-image: linear-gradient(183deg, #e6ebf3, #E9F1F4);
-  box-shadow: 0 0 20px 0 rgba(67, 58, 92, 0.315);
+  box-shadow: 0 0 5px 1px rgba(67, 58, 92, 0.32);
   border: 1px solid rgba(37, 37, 39, 0.58);
 }
 
