--- a/src/Utils/StyleClasses.scss
+++ b/src/Utils/StyleClasses.scss
@@ -51,22 +51,20 @@
 
 .GenericButton-Theme_01 {
   @extend .GenericButton;
-  border: 1px solid rgba(#c3cfe2, 1);
-  background-image: linear-gradient(-45deg, #949494, #585858);
+  border: 1px solid rgba(#c3cfe2, 1) !important;
   color: white;
 }
 
 .GenericButton-Theme_02 {
   @extend .GenericButton;
   color: #323236;
-  border: 1px solid #7a7b7c;
+  border: 1px solid #59595c !important;
   background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
 }
 
 .GenericButton-Theme_03 {
   @extend .GenericButton;
   color: white;
-  border: 1px solid #7a7b7c;
   background-image: linear-gradient(-45deg, #8EC5FC, #E0C3FC);
 }
 
@@ -79,7 +77,7 @@
   text-shadow: 0 0 3px #323236;
   transition: border 10s !important;
   &:hover {
-    background: linear-gradient(to bottom, rgb(59, 59, 61), rgba(0, 0, 0, 0.596)), radial-gradient(at top center, rgb(188, 192, 201) 0%, rgba(0, 0, 0, 0.514) 120%) #818286;
+    background: linear-gradient(to bottom, #3b3b3d, rgba(0, 0, 0, 0.596)), radial-gradient(at top center, rgb(188, 192, 201) 0%, rgba(0, 0, 0, 0.514) 120%) #818286;
     background-blend-mode: multiply,multiply;
     box-shadow: 0 0 5px rgba(0, 0, 0, 1);
     border: 1px solid rgba(184, 198, 218, 0.9);
@@ -119,6 +117,7 @@
   background: linear-gradient(to bottom, rgb(167, 167, 172), rgba(0, 0, 0, 0.151)), radial-gradient(at top center, rgb(188, 192, 201) 0%, rgba(0, 0, 0, 0.514) 120%) #818286;
   background-blend-mode: multiply,multiply;
   box-shadow: 0 0 20px 0 rgba(16, 16, 19, 0.719);
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .ComponentSurface-Theme_02 {
