Lots of improvements in Login screen

--- a/src/Utils/StyleClasses.scss
+++ b/src/Utils/StyleClasses.scss
@@ -164,6 +164,7 @@ $shade1: #23252a;
 $shade2: #3e424c;
 $shade3: #4a4e5a;
 $shade4: #686e7e;
+$inputshade: #353942;
 
 .NeumorphicSurface {
   border-radius: 10px;
