--- a/src/Screens/LogIn/LogIn.scss
+++ b/src/Screens/LogIn/LogIn.scss
@@ -8,35 +8,123 @@
   min-height: 100vh;
   text-align: center;
 
-  .LoginBox {
-    @extend .NeumorphicSurface;
-    margin-bottom: 2.5rem;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    position: relative;
-    margin-top: 15%;
-    height: 70%;
-    width: 60%;
-
-    .LoginTitle {
-      @extend .Text;
-      font-size: 2rem;
-      color: #e3e4e8;
-      text-shadow: 0 0 10px $shade1;
-      margin: 50px;
-    }
-
-  }
-
   .LeftGrid {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-image: linear-gradient(145deg, $shade3, $shade2);
     position: relative;
     height: 100vh;
     width: 40%;
     left: 0;
+
+    .LoginBox {
+      @extend .NeumorphicSurface;
+      margin-bottom: 2.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 425px;
+      min-width: 400px;
+      height: 40%;
+      width: 60%;
+
+      .LoginTitle {
+        @extend .Text;
+        font-size: 2rem;
+        color: #e3e4e8;
+        text-shadow: 0 0 5px $shade1;
+        margin-bottom: 30px;
+      }
+
+      .InputsContainer {
+        display: flex;
+        flex-direction: column;
+
+        .InputWrapper {
+          display: flex;
+          flex-direction: row;
+          width: 100%;
+          justify-content: center;
+          margin: 5px 0;
+
+          .Input {
+            margin: 0;
+            border: none;
+            outline: none;
+            min-width: 250px;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            background-color: $inputshade !important;
+            padding-left: 20px;
+            color: #e3e4e8 !important;
+            font-size: 0.9rem;
+            font-weight: 500;
+            @extend .Text;
+          }
+          .IconContainer {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            background-color: $inputshade;
+            border-bottom-left-radius: 10px;
+            border-top-left-radius: 10px;
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+            .UsernameIcon {
+              width: 90%;
+              height: 90%;
+              color: #D42AA7;
+            }
+            .PasswordIcon {
+              width: 80%;
+              height: 80%;
+              color: #D42AA7;
+            }
+          }
+        }
+      }
+
+      .LoginButton {
+        @extend .Text;
+        @extend .NaumorphicItem;
+        color: #ced0da;
+        text-transform: none;
+        background-color: $inputshade;
+        margin-top: 30px;
+        width: 110px;
+        height: 45px;
+        font-size: 1rem;
+        font-weight: 500;
+        border-radius: 5px;
+        background-color: $shade2;
+      }
+    }
+
+    .HelpText {
+      @extend .Text;
+      font-size: 1.1rem;
+      font-weight: 500;
+      color: #e3e4e8;
+      text-shadow: 0 0 5px $shade1;
+
+      .SignUp {
+        color: #f11fb9;
+        cursor: pointer;
+        transition: text-shadow 0.5s ease-in-out;
+
+        &:hover {
+          text-decoration: underline;
+          text-shadow: 0 0 30px #a30d7b,
+                       0 0 30px #a30d7b,
+                       0 0 30px #a30d7b;
+        }
+      }
+    }
   }
 
   .RightGrid {
@@ -50,5 +138,13 @@
     width: calc(60% - 90px);
     height: 100%;
     right: 0;
+
+    .WellcomeTitle {
+      @extend .Text;
+      font-size: 2rem;
+      color: #e3e4e8;
+      text-shadow: 0 0 3px $shade3;
+      margin: 50px;
+    }
   }
 }
