Minor changes to the styles in the app

--- a/src/Screens/Home/Home.scss
+++ b/src/Screens/Home/Home.scss
@@ -82,6 +82,13 @@
       animation: LiveAnimation 1s infinite alternate;
       display: flex;
       place-items: center;
+
+      .LiveEvent-Info {
+        display: flex;
+        align-self: flex-start;
+        color: #e44a4a;
+        margin-top: 10px;
+      }
     }
   }
 }
