--- a/src/Screens/Learning/LearningArticleWrite/LearningArticleWrite.scss
+++ b/src/Screens/Learning/LearningArticleWrite/LearningArticleWrite.scss
@@ -133,6 +133,18 @@
     @extend .ComponentSurface-Theme_01;
   }
 
+  // TODO: Fix this mess please
+  .ArticleCategoryTitle-Theme_01,
+  .ArticleTagTitle-Theme_01,
+  .ArticlePreviewTitle-Theme_01 {
+    @extend .Titles;
+    text-align: left;
+    font-weight: 600;
+    font-size: 1.3rem;
+    color: white;
+    margin-top: 1.3rem;
+  }
+
   .EditPreviewContainer {
     @extend .ComponentSurface-Theme_01;
 
@@ -171,6 +183,17 @@
   .ActionButtons {
     border: 1px solid rgba(#969696, 1);
     background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
+  }
+
+  .ArticleCategoryTitle-Theme_02,
+  .ArticleTagTitle-Theme_02,
+  .ArticlePreviewTitle-Theme_02 {
+    @extend .Titles;
+    text-align: left;
+    font-weight: 600;
+    font-size: 1.3rem;
+    color: #2c2d36;
+    margin-top: 1.3rem;
   }
 
   .EditPreviewContainer {
@@ -216,6 +239,17 @@
   .ActionButtons {
     border: 1px solid rgba(#c3cfe2, 1);
     background-image: linear-gradient(-45deg, #8ec5fc, #e0c3fc);
+  }
+
+  .ArticleCategoryTitle-Theme_03,
+  .ArticleTagTitle-Theme_03,
+  .ArticlePreviewTitle-Theme_03 {
+    @extend .Titles;
+    text-align: left;
+    font-weight: 600;
+    font-size: 1.3rem;
+    color: #2c2d36;
+    margin-top: 1.3rem;
   }
 
   .EditPreviewContainer {
