Visual changes to Read Articles

--- a/src/Screens/Learning/Learning.scss
+++ b/src/Screens/Learning/Learning.scss
@@ -46,6 +46,7 @@
         .LearningCardList {
           display: flex;
           flex-direction: column;
+          width: 100%;
         }
       }
     }
