--- a/src/Utils/StyleClasses.scss
+++ b/src/Utils/StyleClasses.scss
@@ -155,6 +155,18 @@
   transform: scale(1.01);
 }
 
+.TextColor-Theme_01 {
+  color: lavenderblush !important;
+}
+
+.TextColor-Theme_02 {
+  color: #323236 !important;
+}
+
+.TextColor-Theme_03 {
+  color: lavenderblush !important;
+}
+
 //////////////////////
 // Neumorphic Style //
 //////////////////////
