--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -19,7 +19,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    .EpicCMS {
+    .DT_CMS {
       font-size: 3rem;
       text-transform: none;
       letter-spacing: normal;
