--- a/src/Components/LearningCard/LearningCard.scss
+++ b/src/Components/LearningCard/LearningCard.scss
@@ -12,6 +12,17 @@
   margin: 5px 0;
   cursor: pointer;
 
+  .CardTextContent {
+    justify-content: space-between;
+  }
+
+  .LearningCardDivider {
+    width: 1px;
+    height: 100%;
+    border: none;
+    margin: 0;
+  }
+
   .LearningCardPreview {
     width: 180px;
     height: 180px;
@@ -29,14 +40,20 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 60%;
+    width: calc(55% - 10px);
   }
 
   .LearningCardDescription {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 35%;
+    width: calc(45% - 10px);
+
+    .MarkdownPreview {
+      font-size: 10px !important;
+      font-weight: 400 !important;
+      margin: 0;
+    }
   }
 
   .LearningCardInfo {
@@ -97,17 +114,11 @@
     font-size: 0.8vw;
     text-decoration: underline 1px;
     text-underline-offset: 5px;
+    margin-top: 5px;
   }
 
   .By {
     text-decoration: none;
-  }
-
-  .LearningCardDivider {
-    width: 1px;
-    height: 100%;
-    margin: 0 25px;
-    border: none;
   }
 }
 
