--- a/src/Components/PTextInput/PTextInput.scss
+++ b/src/Components/PTextInput/PTextInput.scss
@@ -67,13 +67,13 @@
   @extend .PTextInput;
   .Title {
     @extend .Title;
-    color: #2c2d36;
+    color: white;
   }
   .InputBox {
     @extend .InputBox;
-    color: #2c2d36;
+    color: white;
     &::placeholder {
-      color: #3d3d42;
+      color: #a3a3ac;
     }
   }
 }
