--- a/src/Components/UserSmallCard/UserSmallCard.scss
+++ b/src/Components/UserSmallCard/UserSmallCard.scss
@@ -58,7 +58,7 @@
     }
   }
 
-  .SmallCardContent {
+  .FloatingMenu {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -70,29 +70,30 @@
     overflow: auto;
     margin-top: 15px;
     margin-right: 5px;
-    right: 0;
-    padding: 10px;
+    right: 5px;
 
     .TitleContainer {
       display: flex;
       flex-direction: row;
       align-items: center;
-      margin: 10px 0;
+      margin: 10px;
+      cursor: pointer;
+    }
 
-      .Icons {
-        background-color: #060822;
-        box-shadow: 0 0 3px rgba(#060822, 0.25);
-        margin-right: 15px;
-        border-radius: 15px;
-        padding: 13px;
-        height: 25px;
-        width: 25px;
-      }
+    .Icons {
+      @extend .NeumorphicSurface;
+      // background-color: orange;
+      box-shadow: 0 0 3px rgba(#060822, 0.25);
+      margin-right: 15px;
+      border-radius: 10px;
+      padding: 10px;
+      height: 25px;
+      width: 25px;
+    }
 
-      .Title {
-        font-weight: 500;
-        color: #060822;
-      }
+    .Title {
+      font-weight: 500;
+      color: #060822;
     }
   }
 }
