--- a/src/Screens/Learning/LearningArticleRead/LearningArticleRead.scss
+++ b/src/Screens/Learning/LearningArticleRead/LearningArticleRead.scss
@@ -72,9 +72,27 @@
     flex-direction: column;
     margin-top: 20px;
     min-height: 60vh;
-    padding: 25px;
+    padding: 0 35px;
     font-size: 1.5rem;
     border-radius: 10px;
+    text-align: left;
+
+    h1 {
+      text-align: center;
+      text-decoration: underline;
+    }
+
+    h2 {
+      text-decoration: underline;
+    }
+
+    blockquote {
+      background-color: rgba(0, 0, 0, 0.1);
+      border-left: 5px solid black;
+      padding: 1px;
+      padding-left: 20px;
+      margin-left: 0px;
+    }
   }
 
 }
