--- a/src/Screens/Signup/Signup.scss
+++ b/src/Screens/Signup/Signup.scss
@@ -27,7 +27,8 @@
       align-items: center;
       justify-content: center;
       min-height: 425px;
-      min-width: 400px;
+      min-width: 475px;
+      padding: 15px 15px;
       height: 40%;
       width: 60%;
 
@@ -46,16 +47,15 @@
         .InputWrapper {
           display: flex;
           flex-direction: row;
-          width: 100%;
           justify-content: center;
+          width: 100%;
           margin: 5px 0;
 
           .Input {
             margin: 0;
             border: none;
             outline: none;
-            min-width: 250px;
-            width: 85%;
+            width: 100%;
             border-top-right-radius: 10px;
             border-bottom-right-radius: 10px;
             background-color: $inputshade !important;
@@ -67,13 +67,13 @@
           }
 
           .LastNameInput {
-            min-width: 0;
-            width: calc(37.5% - 4px);
             @extend .Input;
+            width: 50%;
           }
 
           .FirstNameInput {
-            @extend .LastNameInput;
+            @extend .Input;
+            width: 50%;
             margin-right: 10px;
           }
 
