--- a/src/Utils/StyleClasses.scss
+++ b/src/Utils/StyleClasses.scss
@@ -126,6 +126,12 @@
   border: 1px solid rgba(37, 37, 39, 0.58);
 }
 
+.ComponentSurface-Theme_02_2 {
+  background-image: linear-gradient(-45deg, #f5f7fa, #c3cfe2);
+  box-shadow: 0 0 5px 1px rgba(67, 58, 92, 0.32);
+  border: 1px solid rgba(#969696, 1);
+}
+
 .ComponentSurface-Theme_03 {
   background: linear-gradient(150deg, #9647F1 -5%, #6D80EF 80%);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.20);
