--- a/src/Utils/StyleClasses.scss
+++ b/src/Utils/StyleClasses.scss
@@ -138,9 +138,9 @@
   border: 1px solid rgba(#c3cfe2, 1);
 }
 .ComponentSurface-Theme_03_2 {
-  background: linear-gradient(150deg, #5a4ffa -5%, #8c45e9 120%);
+  background: linear-gradient(150deg, #834fec -5%, #455be9 120%);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.20);
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  border: 1px solid rgba(#c3cfe2, 1);
 }
 
 /////////////////////////
